grammar.js
    document: $ => repeat($._node),

    // ==========================================================================
    // Node types
    // ==========================================================================

    _node: $ => choice(
      $._html_node,
      $._django_node,
    ),

    element: $ => choice(
      $.void_element,
      $.normal_element,
      $.script_element,
      $.style_element,
      $.rcdata_element,
      $.plaintext_element,
      $.foreign_element,
      $.erroneous_end_tag,
    ),

    void_element: $ => seq(
      '<',
      alias($._void_start_tag_name, $.tag_name),
      repeat($._attribute_node),
      choice('>', '/>'),
    ),

    normal_element: $ => seq(
      '<',
      alias($._html_start_tag_name, $.tag_name),
      repeat($._attribute_node),
      choice('>', '/>'),
      repeat($._node),
      choice($.end_tag, $._implicit_end_tag),
    ),

    // For unbalanced HTML tags inside Django conditionals
    _start_tag_only: $ => seq(
      '<',
      alias($._html_start_tag_name, $.tag_name),
      repeat($._attribute_node),
      choice('>', '/>'),
    ),

    script_element: $ => seq(
      alias($.script_start_tag, $.start_tag),
      optional(alias($._raw_text_with_django, $.raw_text)),
      $.end_tag,
    ),

    _raw_text_with_django: $ => repeat1(choice(
      $.raw_text,
      $.django_interpolation,
      $.django_line_comment,
      $.django_statement,
    )),

    style_element: $ => seq(
      alias($.style_start_tag, $.start_tag),
      optional(alias($._raw_text_with_django, $.raw_text)),
      $.end_tag,
    ),

    rcdata_element: $ => choice(
      seq(
        alias($.title_start_tag, $.start_tag),
        optional($._rcdata_with_django),
        $.end_tag,
      ),
      seq(
        alias($.textarea_start_tag, $.start_tag),
        optional($._rcdata_with_django),
        $.end_tag,
      ),
    ),

    _rcdata_with_django: $ => repeat1(choice(
      $.rcdata_text,
      $.django_interpolation,
      $.django_line_comment,
      $.django_statement,
    )),

    foreign_element: $ => seq(
      '<',
      alias($._foreign_start_tag_name, $.tag_name),
      repeat($._attribute_node),
      choice(
        seq('>', repeat($._node), choice($.end_tag, $._implicit_end_tag)),
        '/>',
      ),
    ),

    // ==========================================================================
    // HTML: Start/End Tags
    // ==========================================================================

    start_tag: $ => seq(
      '<',
      alias(
        choice(
          $._html_start_tag_name,
          $._void_start_tag_name,
          $._foreign_start_tag_name,
          $._script_start_tag_name,
          $._style_start_tag_name,
          $._title_start_tag_name,
          $._textarea_start_tag_name,
          $._plaintext_start_tag_name,
        ),
        $.tag_name,
      ),
      repeat($._attribute_node),
      choice('>', '/>'),
    ),

    end_tag: $ => seq(
      '</',
      alias($._end_tag_name, $.tag_name),
      '>',
    ),

    erroneous_end_tag: $ => seq(
      '</',
      $.erroneous_end_tag_name,
      '>',
    ),

    // ==========================================================================
    // HTML: Attributes
    // ==========================================================================

    _attribute_node: $ => choice(
      $.attribute,
      $.django_interpolation,
      $.django_statement,
      $.django_line_comment,
    ),

    attribute: $ => seq(
      $.attribute_name,
      optional(seq(
        '=',
        choice(
          $.attribute_value,
          $.quoted_attribute_value,
        ),
      )),
    ),

    attribute_name: _ => /[^<>"'/=\s\{%]+/,

    attribute_value: $ => prec.left(repeat1(choice(
      $.entity,
      /[^<>"'=\s\{%]+/,
      $.django_interpolation,
    ))),

    quoted_attribute_value: $ => choice(
      seq(
        "'",
        repeat(choice(
          $.entity,
          alias(/[^'&\{%]+/, $.attribute_value),
          // Single { that's not start of Django (followed by non-Django char)
          alias(token(prec(-1, /\{[^{%#]/)), $.attribute_value),
          $.django_interpolation,
          $.django_statement,
        )),
        "'",
      ),
      seq(
        '"',
        repeat(choice(
          $.entity,
          alias(/[^"&\{%]+/, $.attribute_value),
          // Single { that's not start of Django (followed by non-Django char)
          alias(token(prec(-1, /\{[^{%#]/)), $.attribute_value),
          $.django_interpolation,
          $.django_statement,
        )),
        '"',
      ),
    ),

    // ==========================================================================
    // HTML: Text and Entities
    // ==========================================================================

    entity: _ => /&(#x[0-9A-Fa-f]{1,6}|#[0-9]{1,7}|[A-Za-z][A-Za-z0-9]{1,31});/,

    text: $ => prec.right(repeat1(choice(
      $.entity,
      // Single brace that's not start of Django (lookahead simulation)
      token(prec(-1, /\{/)),
      // Greater-than sign can appear in text (after comments, etc.)
      token(prec(-1, />/)),
      // Regular text excluding HTML special chars and braces
      token(/[^<>&\s\{][^<>&\{]*/),
    ))),

    // ==========================================================================
    // Django: Interpolation ({{ expression }})
    // ==========================================================================

    django_interpolation: $ => seq(
      '{{',
      optional($._django_inner_ws),
      optional($.filter_expression),
      optional($._django_inner_ws),
      '}}',
    ),

    // ==========================================================================
    // Django: Comments
    // ==========================================================================

    django_line_comment: _ => token(seq(
      '{#',
      /[^#]*#*([^#}][^#]*#*)*/,
      '#}',
    )),

    django_block_comment: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'comment',
      optional(seq($._django_inner_ws, alias(/[^%]+/, $.comment_text))),
      optional($._django_inner_ws),
      $._django_tag_close,
      $._django_comment_content,
    ),

    // ==========================================================================
    // Django: Statements
    // ==========================================================================

    django_statement: $ => choice(
      $.django_if_block,
      $.django_for_block,
      $.django_with_block,
      $.django_block_block,
      $.django_extends_tag,
      $.django_include_tag,
      $.django_load_tag,
      $.django_url_tag,
      $.django_csrf_token_tag,
      $.django_autoescape_block,
      $.django_filter_block,
      $.django_spaceless_block,
      $.django_verbatim_block,
      $.django_cycle_tag,
      $.django_firstof_tag,
      $.django_now_tag,
      $.django_regroup_tag,
      $.django_ifchanged_block,
      $.django_widthratio_tag,
      $.django_templatetag_tag,
      $.django_debug_tag,
      $.django_generic_block,
      $.django_generic_tag,
    ),

    // ==========================================================================
    // Django: If Block
    // ==========================================================================

    django_if_block: $ => seq(
      $.django_if_open,
      repeat(choice($._node, alias($._start_tag_only, $.unpaired_start_tag), alias($.end_tag, $.unpaired_end_tag))),
      repeat($.django_elif_branch),
      optional($.django_else_branch),
      $.django_endif,
    ),

    django_if_open: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'if',
      $._django_inner_ws,
      $.test_expression,
      optional($._django_inner_ws),
      $._django_tag_close,
    ),

    django_else_branch: $ => seq(
      $.django_else,
      repeat(choice($._node, alias($._start_tag_only, $.unpaired_start_tag), alias($.end_tag, $.unpaired_end_tag))),
    ),

    django_else: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'else',
      $._django_tag_close,
    ),

    django_endif: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'endif',
      $._django_tag_close,
    ),

    // ==========================================================================
    // Django: For Block
    // ==========================================================================

    django_for_block: $ => seq(
      $.django_for_open,
      repeat(choice($._node, alias($._start_tag_only, $.unpaired_start_tag), alias($.end_tag, $.unpaired_end_tag))),
      optional($.django_empty_branch),
      $.django_endfor,
    ),

    django_for_open: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'for',
      $._django_inner_ws,
      $.loop_variables,
      $._django_inner_ws,
      'in',
      $._django_inner_ws,
      $.filter_expression,
      optional(seq($._django_inner_ws, 'reversed')),
      optional($._django_inner_ws),
      $._django_tag_close,
    ),

    django_endfor: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'endfor',
      $._django_tag_close,
    ),

    loop_variables: $ => prec.left(seq(
      $.identifier,
      repeat(seq(optional($._django_inner_ws), ',', optional($._django_inner_ws), $.identifier)),
    )),

    // ==========================================================================
    // Django: With Block
    // ==========================================================================

    django_url_tag: $ => seq(
      $._django_tag_open,
      optional($._django_inner_ws),
      'url',
      $._django_inner_ws,
      $.filter_expression,
      repeat(seq(
        $._django_inner_ws,
        choice($.named_argument, $.filter_expression),
      )),
      optional(seq($._django_inner_ws, 'as', $._django_inner_ws, $.identifier)),
      optional($._django_inner_ws),
      $._django_tag_close,
    ),

    generic_tag_name: $ => $.identifier,

    filter_expression: $ => prec.left(seq(
      $.primary_expression,
      repeat(seq(
        optional($._django_inner_ws),
        '|',
        optional($._django_inner_ws),
        $.filter_call,
      )),
    )),

    primary_expression: $ => choice(
      $.literal,
      $.lookup,
    ),

    literal: $ => choice(
      $.string,
      $.number,
      $.i18n_string,
    ),

    lookup: $ => seq(
      $.identifier,
      repeat(seq('.', choice($.identifier, /\d+/))),
    ),

    filter_call: $ => prec.left(seq(
      alias($.identifier, $.filter_name),
      optional(seq(
        ':',
        optional($._django_inner_ws),
        $.filter_argument,
      )),
    )),

    filter_argument: $ => choice(
      $.literal,
      $.lookup,
    ),

    test_expression: $ => $.or_expression,

    or_expression: $ => prec.left(1, seq(
      $.and_expression,
      repeat(seq($.or_keyword, $.and_expression)),
    )),

    or_keyword: _ => token(prec(10, 'or')),

    and_expression: $ => prec.left(2, seq(
      $.not_expression,
      repeat(seq($.and_keyword, $.not_expression)),
    )),

    and_keyword: _ => token(prec(10, 'and')),

    not_expression: $ => choice(
      prec(3, seq(token(prec(10, 'not')), $.not_expression)),
      $.comparison_expression,
    ),

    comparison_expression: $ => prec.left(4, seq(
      $.filter_expression,
      repeat(seq(
        $.comparison_operator,
        $.filter_expression,
      )),
    )),

    comparison_operator: _ => choice(
      token(prec(10, seq('not', /[ \t\r\n]+/, 'in'))),
      token(prec(10, seq('is', /[ \t\r\n]+/, 'not'))),
      token(prec(10, 'in')),
      token(prec(10, 'is')),
      token(prec(10, '==')),
      token(prec(10, '!=')),
      token(prec(10, '>=')),
      token(prec(10, '>')),
      token(prec(10, '<=')),
      token(prec(10, '<')),
    ),

    // ==========================================================================
    // Django: Tokens
    // ==========================================================================

    // Identifier that excludes Django keywords (and, or, not, in, is, as)
    identifier: _ => token(prec(-1, /[a-zA-Z_][a-zA-Z0-9_]*/)),

    number: _ => token(prec(1, seq(
      optional(choice('+', '-')),
      choice(
        seq(/\d+\.\d+/, optional(seq(/[eE]/, optional(choice('+', '-')), /\d+/))),
        seq(/\d+\./, /[eE]/, optional(choice('+', '-')), /\d+/),
        seq(/\.\d+/, optional(seq(/[eE]/, optional(choice('+', '-')), /\d+/))),
        seq(/\d+/, optional(seq(/[eE]/, optional(choice('+', '-')), /\d+/))),
      ),
    ))),

    string: _ => choice(
      seq("'", repeat(choice(/[^'\\]/, /\\./)), "'"),
      seq('"', repeat(choice(/[^"\\]/, /\\./)), '"'),
    ),

    _django_tag_open: _ => choice('{%', '{%-'),

    // Django tag close: %} or -%}
    _django_tag_close: _ => choice('%}', '-%}'),

    // ==========================================================================
    // Django: Whitespace handling
    // ==========================================================================

    _django_inner_ws: _ => /[ \t\r\n]+/,
  },
});
